testData/annotator/listUnclosedString.R
<info descr="R_LOCAL_VARIABLE">hello</info> <- <error descr="unclosed string literal">"hello
</error>